--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
 	<title>Clue Trivia</title>
  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css">
-
+	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </head>
 <body>
-<div class="container">
-<div class="jumbotron">
-  <h1>Clue (The Movie) Trivia</h1>
-  <!-- <p>You will have 45 seconds to answer as many multiple choice questions as you can about the movie.  Press the button to begin1</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">I'm ready!</a></p> -->
-</div>
-</div>
+	<div class="container">
+		<div class="jumbotron">
+	  		<h1>Clue (The Movie) Trivia</h1>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="panel description">
+					  <p>You will have 45 seconds to answer as many multiple choice questions as you can about the movie Clue.  Press the button to begin!</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">I'm ready!</a></p>
 
-
+				</div>
+			</div>
+		</div>
+	</div>
 
 		
 		
@@ -25,6 +32,6 @@
 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="assets/javascript/game.js"></script>
+
 </body>
 </html>
