--- a/index.html
+++ b/index.html
@@ -23,10 +23,24 @@
 			</div>
 		</div>
 	</div>
-	<div class="container">
+	<div class="container mainContent">
+		<div class="row">
+			<div class="col-md-9">
+				<div class="panel text-center qNa">
+				</div>
+			</div>	
+			<div class="col-md-3">
+				<div class="panel text-center timer">
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<div class="container finalContent">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="panel mainContent text-center">
+				<div class="panel text-center answers">				
 				</div>
 			</div>
 		</div>
