fixed radial display issue, can only select one radial button now.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="container mainContent">
 		<div class="row">
 			<div class="col-md-9">
-				<div class="panel text-center qNa">
+				<div class="panel text-left qNa">
 				</div>
 			</div>	
 			<div class="col-md-3">
