--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="panel intro text-center">
-					  <h3>You will have 45 seconds to answer as many multiple choice questions as you can about the movie Clue.  Press the button to begin!</h3>
+					  <h3>You will have 50 seconds to answer as many multiple choice questions as you can about the movie Clue.  Press the button to begin!</h3>
 					  <p><a class="btn btn-primary btn-lg startBtn" href="#" role="button">I'm ready!</a></p>
 
 				</div>
@@ -40,7 +40,12 @@
 	<div class="container finalContent">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="panel text-center answers">				
+				<div class="panel text-center answers">
+				<h3 id="correct"></h3>
+				<br>
+				<h3 id="incorrect"></h3>
+				<br>
+				<h3 id ="unanswered"></h3>			
 				</div>
 			</div>
 		</div>
